HSEARCH-3151 Fix OSGi integration tests with JDK10